--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src='./rockPaperScissors.js' defer></script>
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script>
-        
-    </script>
+    <h1>Open the browser console to play Rock, Paper, Scissors!</h1>
 </body>
 </html>
 
