--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Open the browser console to play Rock, Paper, Scissors!</h1>
+    <header>
+        <h1>Rock, Paper, Scissors!</h1>
+    </header>
+
+    <main>
+        <div id="instructions">
+            <p>Click a choice below to play Rock, Paper, Scissors! First to 5 points wins.</p>
+        </div>
+        <div id="scores">
+            <p>Player Score: <span id="player-score"></span></p>
+            <p>Computer Score: <span id="computer-score"></span></p>
+        </div>
+        <div id="choices">
+            <button value="rock">Rock</button>
+            <button value="paper">Paper</button>
+            <button value="scissors">Scissors</button>
+        </div>
+        <div id="outcome">
+            <p>Your choice: <span id="player-choice"></span></p>
+            <p>Computer choice: <span id="computer-choice"></span></p>
+            <p>Round Result: <span id="round-result"></span></p>
+        </div>
+        <button id="game-restart">Play Again?</button>
+    </main>
 </body>
 </html>
 
