--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <p>Click a choice below to play Rock, Paper, Scissors! First to 5 points wins.</p>
         </div>
         <div id="scores">
-            <p>Player Score: <span id="player-score"></span></p>
-            <p>Computer Score: <span id="computer-score"></span></p>
+            <p>Player Score: <span id="player-score">0</span></p>
+            <p>Computer Score: <span id="computer-score">0</span></p>
         </div>
         <div id="choices">
-            <button value="rock">Rock</button>
-            <button value="paper">Paper</button>
-            <button value="scissors">Scissors</button>
+            <button class="choice" value="rock">Rock</button>
+            <button class="choice" value="paper">Paper</button>
+            <button class="choice" value="scissors">Scissors</button>
         </div>
         <div id="outcome">
             <p>Your choice: <span id="player-choice"></span></p>
