Complete ui js functionality

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="./style.css" type="text/css" rel="stylesheet">
     <script src='./rockPaperScissors.js' defer></script>
     <title>Rock Paper Scissors</title>
 </head>
@@ -30,7 +31,10 @@
             <p>Computer choice: <span id="computer-choice"></span></p>
             <p>Round Result: <span id="round-result"></span></p>
         </div>
-        <button id="game-restart">Play Again?</button>
+        <div id="game-end">
+            <p id="final-game-text"></p>
+            <button id="game-restart">Play Again?</button>
+        </div>
     </main>
 </body>
 </html>
